[package]
name = "rpause"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["dylib"]

[features]
default=["dbg64_plugins_sdk_sys/x64"]
x86=["dbg64_plugins_sdk_sys/x86"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbg64_plugins_sdk_sys = "0.1"
